--- a/package.json
+++ b/package.json
@@ -1,34 +1,103 @@
 {
-  "name": "matomo-setup",
-  "version": "1.0.0",
-  "description": "Description of my package",
-  "main": "index.js",
+  "name": "matomo-track",
+  "version": "1.5.1",
+  "private": true,
+  "dependencies": {
+    "@types/lodash": "^4.14.181",
+    "@types/node": "^16.7.13",
+    "@types/react": "^17.0.20",
+    "lodash": "^4.17.21",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "5.0.0",
+    "sass": "^1.49.9",
+    "typescript": "^4.4.2",
+    "web-vitals": "^2.1.0"
+  },
   "scripts": {
-    "build": "tsc && babel src --out-dir dist"
+    "start": "react-scripts start",
+    "test": "react-scripts test --collectCoverageFrom=!src/**/*.stories.tsx --collectCoverageFrom=!src/**/*.types.ts --collectCoverageFrom=!src/**/*.scss --collectCoverageFrom=!src/**/*translation.json --collectCoverageFrom=!src/**/*.ts",
+    "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
+    "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "eject": "react-scripts eject",
+    "build": "rollup -c"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "peerDependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
-  "files": [
-    "dist/",
-    "src/"
-  ],
-  "dependencies": {
-    "lodash": "^4.17.21"
-  },
-  "keywords": [],
-  "author": "Your Name",
-  "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.24.5",
-    "@babel/core": "^7.24.5",
-    "@babel/preset-env": "^7.24.5",
-    "@babel/preset-typescript": "^7.24.1",
-    "@types/lodash": "^4.17.1",
-    "@types/node": "^20.12.12",
-    "@types/react": "^18.3.2",
-    "typescript": "^5.4.5"
+    "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.7",
+    "prettier": "^2.6.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "rollup": "^2.70.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-scss": "^2.6.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.2",
+    "rollup-plugin-ignore-import": "^1.3.2",
+    "webpack": "^5.70.0"
   },
-  "type": "module"
+  "description": "This project was mui with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "lib/index.js",
+  "module": "lib/index.esm.js",
+  "types": "lib/index.d.ts",
+  "author": "PT",
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json}": [
+      "eslint --fix"
+    ],
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  }
 }
