--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,34 @@
 {
-    "compilerOptions": {
-        "target": "es5",
-        "lib": ["es2015", "dom"], // Include 'es2015' and 'dom' libraries
-        "jsx": "react",
-        "esModuleInterop": true,
-        "strict": true
-      },
-      "include": ["src"]
-  }
+  "compilerOptions": {
+    "target": "es5",
+    "outDir": "lib",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "declaration": true,
+    "declarationDir": "lib",
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx"
+  },
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.stories.tsx",
+    "lib"
+]
+}
